# real-persona-dialog

./: 00003.flac  00009.flac  00010.flac  README.md  pyproject.toml  run_on_lambda.yaml
outputs/train/: 00001.flac  00002.flac  metadata.jsonl
real_persona_dialogue/: __main__.py  _types.py  create_speaker_conditioning.py
speakers/zonos/: AA.json  AB.json  AC.json  AD.json  AE.json  AF.json  AG.json  AH.json  AI.json  AJ.json  AK.json  AL.json  AL.pt  AM.json  AN.json  AO.json  AP.json  AQ.json  AR.json  AS.json  AT.json  AU.json  AV.json  AW.json  AX.json  AY.json  AZ.json  BB.json  BC.json  BD.json  BE.json  BF.json  BG.json  BH.json  BI.json  BJ.json  BK.json  BL.json  BM.json  BN.json  (+196 more)
